# Viper25519

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  codecov.yml  readme.md
cmake/: CTestCustom.cmake.in
docs/: poxy.toml
docs/pages/: main_page.md  vrf.md
include/ed25519-viper/: curve25519.hpp  ed25519.hpp  secmem.hpp
include/viper25519/: curve25519.hpp  ed25519.hpp  errors.hpp  kes25519.hpp  secmem.hpp  vrf25519.hpp
src/: curve25519.cpp  ed25519.cpp  kes25519.cpp  utils.hpp  vrf.cpp  vrf25519.cpp
test/: CMakeLists.txt  test_viper_ed25519_api.cpp  test_viper_ed25519_bignum25519.cpp  test_viper_ed25519_curve25519.cpp  test_viper_ed25519_donna.cpp  test_viper_ed25519_internals.cpp  test_viper_ed25519_kes.cpp  test_viper_ed25519_key_gen.cpp  test_viper_ed25519_signatures.cpp  test_viper_ed25519_vrf.cpp  testing.hpp
